# lazyxchacha-js

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
example/: README.md  index.js  package-lock.json  package.json
pkg/: lazyxchacha.d.ts  lazyxchacha.js  lazyxchacha_bg.wasm  lazyxchacha_bg.wasm.d.ts  package.json
src/: hex.rs  keypair.rs  lazyxchacha.rs  lib.rs
