[package]
name = "lazyxchacha"
version = "0.1.9"
description = "Lazy XChaCha20-Poly1305 in JavaScript base on RustCrypto: ChaCha20Poly1305."
edition = "2018"
license-file = "LICENSE"
keywords = ["lazyxchacha", "xchacha"]
repository = "https://github.com/prongbang/lazyxchacha-js"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
chacha20poly1305 = "0.10.1"
x25519-dalek = { version = "2.0.1", features = ["getrandom", "static_secrets"] }
faster-hex = "0.9.0"
getrandom = { version = "0.2", features = ["js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
hex = "0.4.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
